force-app/main/default/objects/Art_Event__c/Art_Event__c.object-meta.xml
<CustomObject>
    <label>Art Event</label>
    <nameField>
        <label>Art Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Art Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>