force-app/main/default/objects/Art_Event__c/fields/Activities_and_Entertainment_Budget__c.field-meta.xml
<CustomField>
    <fullName>Activities_and_Entertainment_Budget__c</fullName>
    <label>Activities and Entertainment Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>