force-app/main/default/objects/Art_Event__c/fields/Decor_Budget__c.field-meta.xml
<CustomField>
    <fullName>Decor_Budget__c</fullName>
    <label>Decor Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>