force-app/main/default/objects/Art_Event__c/fields/Other_Budget__c.field-meta.xml
<CustomField>
    <fullName>Other_Budget__c</fullName>
    <label>Other Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>