force-app/main/default/objects/Art_Event__c/fields/Printing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Printing_Budget__c</fullName>
    <label>Printing Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>