force-app/main/default/objects/Art_Event__c/fields/Transportation_Budget__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Budget__c</fullName>
    <label>Transportation Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>